[Y26W2-220] chore(api): 최신 버전으로 api 스펙 업데이트
